--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Kioshi Pictures
 email: chris@ampelos.io
 description: > # this means to ignore newlines until "baseurl:"
-  The Kioshi Picture Company is a small 
+  The Kioshi Picture Company is a clever young picture house in New Orleans.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://kioshi.pictures" # the base hostname & protocol for your site
 
