--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Kioshi Pictures
-email: chris@ampelos.io
+email: mail@kioshi.pictures
 description: > # this means to ignore newlines until "baseurl:"
   The Kioshi Picture Company is a clever young picture house in New Orleans.
 baseurl: "" # the subpath of your site, e.g. /blog
